tmp: hcs200: add intellicode

--- a/conf/rtl_433.example.conf
+++ b/conf/rtl_433.example.conf
@@ -484,6 +484,7 @@ convert si
   protocol 255 # Mueller Hot Rod water meter
   protocol 256 # ThermoPro TP28b Super Long Range Wireless Meat Thermometer for Smoker BBQ Grill
   protocol 257 # BMW Gen3 TPMS
+  protocol 259 # Genie / Overhead Door Intellicode KeeLoq Hopping Encoder based remotes
 
 ## Flex devices (command line option "-X")
 
